--- a/assets/backend/css/app.css
+++ b/assets/backend/css/app.css
@@ -12407,7 +12407,8 @@ div.dt-button-info {
   border: 1px solid #dee2e6;
   -webkit-box-shadow: none;
           box-shadow: none;
-  margin: 0; }
+  margin: 0;
+  z-index: 90 !important; }
   .note-editor.note-frame .note-statusbar {
     background-color: #fff;
     border-top: 1px solid #dee2e6; }
